# dripstone

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  SUPPORT.md  azure-pipelines.yml  pyproject.toml
.changelog/: template.md
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug.md  discussion.md  docs.md  workflow.md
src/dripstone/: __main__.py  label.py
tests/: test_dripstone.py
